# memoree

./: .dockerignore  .gitignore  .gitleaks.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  deny.toml  dist-workspace.toml  docker-compose.yml
.github/: RELEASING.md
.github/workflows/: ci.yml  release.yml  site-image.yml
docs/: architecture.md  checkpoints.md  configuration.md  evaluation.md  index.mdx  metrics.md  model-integration.md  project-index.md  protocol.md  quality.md
eval/corpus/v1/: baseline.json  cases.jsonl  seed.jsonl
eval/corpus/v2/: baseline.json  cases.jsonl  probe-recovery.json  seed.jsonl
eval/project-structure/v1/: README.md  cases.jsonl  lookup-cases.jsonl
eval/project-structure/v1/results/: 2026-07-21.json
eval/reranker/: README.md  calibration-v1.jsonl  heldout-v1.jsonl
scripts/: build-signed-release-manifest.sh  check-release-metadata.sh  export-web-contracts.sh  test-auto-update.sh  test-installer-upgrade.sh
site/: Dockerfile  astro.config.mjs  nginx.conf  package.json  pnpm-lock.yaml
site/public/: install.sh  llms-full.txt  llms.txt  robots.txt
site/public/.well-known/: security.txt
site/public/agents/: instructions.md
site/public/releases/: latest.json
site/public/schema/: v1.json
site/src/: content.config.ts
site/src/layouts/: SiteLayout.astro
site/src/pages/: 404.astro  index.astro  install.astro  license.astro  privacy.astro  security.astro
site/src/pages/releases/: index.astro
site/src/styles/: site.css  starlight.css
skills/use-memoree/: SKILL.md
src/: cas.rs  checkpoint.rs  compiler.rs  context.rs  error.rs  eval.rs  instructions.rs  lib.rs  main.rs  metrics.rs  project_index.rs  project_structure.rs  protocol.rs  remember.rs  reranker_eval.rs  semantic.rs  service.rs  store.rs  transport.rs  update.rs  upgrade.rs
tests/: cli_e2e.rs  eval_cli_e2e.rs  upgrade_from_v02.rs
